--- a/.github/workflows/Data.yml
+++ b/.github/workflows/Data.yml
@@ -19,8 +19,28 @@ jobs:
         run: mvn clean install
       - name: Test Code
         run: mvn test
-  deploy:
+  build :
     needs: test
+    runs-on: ubuntu-latest
+    steps:
+      - name: Get Codebase for Build
+        uses: actions/checkout@v5
+      - name: Install java
+        uses: actions/setup-java@v5
+        with:
+          distribution: 'oracle'
+          java-version: '21'
+          cache: 'maven'
+      - name: Build with Maven
+        run: mvn clean package
+      -name: Upload Build Artifacts
+      - uses: actions/upload-artifact@v4
+        with:
+          name: build-jar
+          path: target/github-data.jar
+
+  deploy:
+    needs: build
     runs-on: ubuntu-latest
     steps:
       - name: Get Codebase for Deployment
