--- a/pom.xml
+++ b/pom.xml
@@ -43,7 +43,8 @@
 	</dependencies>
 
 	<build>
-		<plugins>
+        <finalName>github-data</finalName>
+        <plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
