--- a/.github/workflows/Data.yml
+++ b/.github/workflows/Data.yml
@@ -45,12 +45,12 @@ jobs:
     steps:
       - name: Get Codebase for Deployment
         uses: actions/checkout@v5
-      - name: Install java
-        uses: actions/setup-java@v5
-        with:
-          distribution: 'oracle'
-          java-version: '21'
-          cache: 'maven'
+#      - name: Install java
+#        uses: actions/setup-java@v5
+#        with:
+#          distribution: 'oracle'
+#          java-version: '21'
+#          cache: 'maven'
       - name: install Dependencies
         run: mvn clean install
       - name: Deploy to Server
