--- a/.github/workflows/Data.yml
+++ b/.github/workflows/Data.yml
@@ -45,13 +45,19 @@ jobs:
     steps:
       - name: Get Codebase for Deployment
         uses: actions/checkout@v5
-#      - name: Install java
-#        uses: actions/setup-java@v5
-#        with:
-#          distribution: 'oracle'
-#          java-version: '21'
-#          cache: 'maven'
+      - name: Install java
+        uses: actions/setup-java@v5
+        with:
+          distribution: 'oracle'
+          java-version: '21'
+          cache: 'maven'
       - name: install Dependencies
         run: mvn clean install
+      - name: get Build Artifacts
+        uses: actions/download-artifact@v4
+        with:
+          name: build-jar
+      - name: Output Artifacts
+        run: ls
       - name: Deploy to Server
         run: echo "Deploying to server..."
