--- a/.github/workflows/Data.yml
+++ b/.github/workflows/Data.yml
@@ -22,6 +22,8 @@ jobs:
   build :
     needs: test
     runs-on: ubuntu-latest
+    outputs:
+      script-file: ${{ steps.publish_id.outputs.script-file }}
     steps:
       - name: Get Codebase for Build
         uses: actions/checkout@v5
@@ -33,6 +35,9 @@ jobs:
           cache: 'maven'
       - name: Build with Maven
         run: mvn clean package
+      - name: Publish generate classes file name
+        id: publish_id
+        run: find target/classes/com/example/github/*.class -type f -execdir echo 'script-file = {}' >> $GITHUB_OUTPUT ';'
       - name: Upload Build Artifacts
         uses: actions/upload-artifact@v4
         with:
@@ -59,5 +64,7 @@ jobs:
           name: build-jar
       - name: Output Artifacts
         run: ls
+      - name: Output file name
+        run: echo "File name is ${{ needs.build.outputs.script-file }}"
       - name: Deploy to Server
         run: echo "Deploying to server..."
