--- a/.github/workflows/Data.yml
+++ b/.github/workflows/Data.yml
@@ -1,8 +1,10 @@
 name: Deploy Website
 on:
-  push:
-    branches:
-      - master
+  workflow_dispatch:
+
+#  push:
+#    branches:
+#      - master
 jobs:
   test:
     runs-on: ubuntu-latest
