--- a/.github/workflows/VirtualArgs.yml
+++ b/.github/workflows/VirtualArgs.yml
@@ -1,8 +1,10 @@
 name: Virtual Arguments Deployment
 on:
-  push:
-    branches:
-      - master
+  workflow_dispatch:
+
+#  push:
+#    branches:
+#      - master
 jobs:
   test:
     env:
