--- a/.github/workflows/controlling-workflow.yml
+++ b/.github/workflows/controlling-workflow.yml
@@ -26,7 +26,7 @@ jobs:
         id: run-test
         run: mvn test
       - name: Upload Test Report
-        if: steps.run-test.outcome == 'failure'
+        if: failure() && steps.run-test.outcome == 'failure'
         uses: actions/upload-artifact@v4
         with:
           name: test-report
