added needs in reposrt

--- a/.github/workflows/controlling-workflow.yml
+++ b/.github/workflows/controlling-workflow.yml
@@ -79,6 +79,7 @@ jobs:
       - name: Deploy to Server
         run: echo "Deploying to server..."
   report:
+    needs: [test, build, deploy]
     if: failure()
     runs-on: ubuntu-latest
     steps:
